# report--cli

./: .gitignore  Cargo.nix  Cargo.toml  flake.nix  rust-toolchain.toml
.cache/nix/: fetcher-cache-v4.sqlite  flake-registry.json
.cache/nix/tarball-cache/objects/pack/: pack-5c8de434cbe3627ab37b5aa7763d4f81d4591d07.idx  pack-5c8de434cbe3627ab37b5aa7763d4f81d4591d07.pack  pack-92279dd7fb07a49978ecc15f9023723b8a628e8f.idx  pack-abe4d1a5bec9565838dca8dca23f35195aa656c6.idx  pack-abe4d1a5bec9565838dca8dca23f35195aa656c6.pack
.github/workflows/: dist.yml
docs/: RELEASE.md
nix/cargo-dist/: Cargo.nix
scripts/: build-macos-release.sh  build-windows-installer.ps1
src/: main.rs
wix/: main.wxs
