[package]
name = "report-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[package]
name = "report-builder"
version = "0.1.0"
edition = "2025"

[workspace.metadata.dist]
installers = ["msi", "pkg", "zip"]

[workspace.metadata.dist.windows]
installer = "msi"
add_to_path = true

[workspace.metadata.dist.macos]
installer = "pkg"
universal = true
install_path = "/usr/local/bin"

