[package]
name = "report-builder"
version = "0.1.0"
edition = "2021"   # or "2024" if your toolchain supports it

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"
chrono = { version = "0.4", default-features = false, features = ["std"] }

# ensure you have src/main.rs; if your binary name != package name, uncomment:
# [[bin]]
# name = "report-builder"
# path = "src/main.rs"

[package.metadata.dist]
installers = ["msi", "pkg", "zip"]

[package.metadata.dist.windows]
installer = "msi"
add_to_path = true

[package.metadata.dist.macos]
installer = "pkg"
universal = true
install_path = "/usr/local/bin"

